packages/parser/test/tokenizer/E0003.txt
"
===== err =====
anonymous:1:1: SyntaxError: E0003 - Unterminated string literal
1 | "
  | ^
